--- a/package.json
+++ b/package.json
@@ -17,18 +17,23 @@
     "@tsconfig/svelte": "^5.0.4",
     "@types/node": "^22.13.8",
     "autoprefixer": "^10.4.20",
-    "bits-ui": "^1.3.5",
+    "bits-ui": "^0.22.0",
     "clsx": "^2.1.1",
+    "eslint-plugin-svelte": "^3.0.2",
+    "formsnap": "^1.0.1",
+    "lucide-svelte": "^0.477.0",
     "prettier": "3.5.3",
     "prettier-plugin-svelte": "^3.3.3",
     "shadcn-svelte": "^0.14.0",
     "svelte": "^5.20.2",
     "svelte-check": "^4.1.4",
+    "sveltekit-superforms": "^2.23.1",
     "tailwind-merge": "^3.0.2",
     "tailwind-variants": "^0.3.1",
     "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "~5.7.2",
-    "vite": "^6.2.0"
+    "vite": "^6.2.0",
+    "zod": "^3.24.2"
   }
 }
