--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
     "eslint-plugin-svelte": "^3.0.2",
     "formsnap": "^1.0.1",
     "lucide-svelte": "^0.477.0",
-    "prettier": "3.5.3",
+    "prettier": "^3.5.3",
     "prettier-plugin-svelte": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "shadcn-svelte": "^0.14.0",
     "svelte": "^5.20.2",
     "svelte-check": "^4.1.4",
@@ -35,5 +36,8 @@
     "typescript": "~5.7.2",
     "vite": "^6.2.0",
     "zod": "^3.24.2"
+  },
+  "dependencies": {
+    "mode-watcher": "^0.5.1"
   }
 }
